Fixed alignment of Menu items on medium to large screens with justify-content in media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ header {
     display: inline-block;
     position: static;
     padding: 0;
+    width: auto;
+    justify-content: flex-end;
   }
 
   #menu > li {
